Add default index.refresh_interval of 30s to all templates
The new optimization in ES7 onwards prevents us from getting
correct message counts on indices:

https://www.elastic.co/guide/en/elasticsearch/reference/7.17/breaking-changes-7.0.html#_skipped_background_refresh_on_search_idle_shards

Fixes #11689